# kafori

./: .dockerignore  .gitignore  Dockerfile  README.md  kafori.sql  kafori_conda.yml  pyproject.toml  test.tar
.github/workflows/: docker-backend.yml  docker-frontend.yml  docker-images.yml  test.yaml
backend/: Dockerfile  banner.py  banner.txt  kafori_conda.yml  logger.py  main.py  pyproject.toml  routers.py  settings.docker.yaml  settings.py  settings.yaml
backend/analysis/: analysis_base.py  config.yaml  data_analysis.py  framework.py  tpm_analysis.py  upstream.py
backend/api/: analysis_routers.py  api_routers.py  config.py  dl_providers.py  file_routers.py  files.py  utils.py
backend/conf/: settings.yaml
backend/db/: background_task.py  db_routers.py  interface.py  utils.py
backend/routers/: analysis_routers.py  db_routers.py  down_t_rou.py  download_routers.py  file_routers.py  router.py  sequenceserver.py  validation.py
docker/: Dockerfile  docker-compose.yml
docker/backend/: Dockerfile
docs/: CONTRIBUTING.md  README.MD  fastapi基础.md  改进.md  数据库设计.md
docs/后端API文档/: API接口设计.md  README.md  分析工具集成.md  后端API文档.md  拓展插件集成.md  数据处理流程.md  数据库设计.md
docs/部署/: 1-Linux安装MySQL8.0.22（基于Debian12）.md  2-Linux源码安装redis.md  docker安装(debian12).md
frontend/: .env.development  .env.production  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  (+2 more)
tests/: conftest.py  test_analysis_base.py  test_expclass.py  test_files.py  test_logger.py  test_upstream.py  test_utils.py
(+159 files in other folders)
